# py_lucky_number

./: .bandit.yml  .dockerignore  .editorconfig  .env.example  .gitignore  ARCHITECTURE.md  DEPLOYMENT_LOG.md  Dockerfile  HOW_TO_RUN.md  LICENSE  MICROSERVICES_PLAN.md  MOBILE_STRATEGY.md  Makefile  README.md  demo.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run_server.py  setup.cfg
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: cd.yml  ci.yml  codeql.yml  opencode.yml
src/lucky_number/: __init__.py  config.py  main.py  models.py
src/lucky_number/api/: dependencies.py  routes.py
src/lucky_number/services/: cache.py  caixa_api.py  gerador.py
static/: index.html
tests/: test_api.py  test_cache.py  test_caixa_api.py  test_config.py  test_gerador.py  test_models.py
